fix: centerlize text of button on mobile

--- a/src/components/Button/index.module.less
+++ b/src/components/Button/index.module.less
@@ -2,7 +2,6 @@
 .button {
   cursor: pointer;
   position: relative;
-  background-color: transparent;
   border: none;
   display: flex;
   align-items: center;
@@ -11,11 +10,12 @@
   border-radius: 24px;
   height: 40px;
   border-radius: 6px;
-  padding: 12px 20px;
+  padding: 0 20px;
   overflow: hidden;
   font-family: Helvetica Neue;
   transition: background-color var(--theme-transition-duration, 0.1s) ease,
     color var(--theme-transition-duration, 0.1s) ease;
+  -webkit-appearance: none;
   &.small {
     height: 32px;
     padding: 8px 16px;
@@ -72,20 +72,21 @@
 @media (max-width: @mid-screen) {
   .button {
     height: 32px;
-    padding: 8px 16px;
+    padding: 0 16px;
+    line-height: 1;
     &.small {
       height: 32px;
-      padding: 6px 16px;
+      padding: 0 16px;
       font-size: 12px;
     }
     &.middle {
       height: 32px;
-      padding: 10px 18px;
+      padding: 0 18px;
       font-size: 14px;
     }
     &.large {
       height: 40px;
-      padding: 12px 22px;
+      padding: 0 22px;
       font-size: 16px;
     }
   }
